<resources>
    <string name="app_name">Emall</string>
    <string name="slider_heading">Best Collections in Summer Sale</string>
    <string name="please_select_a_category">Please Select a Category you want to shop for</string>
    <string name="welcome_to_emall">Welcome to Emall</string>
    <string name="select_category_heading">Please Select the Category you want to shop for</string>
    <string name="new_devices">New Devices</string>
    <string name="used_devices">Used Devices</string>
    <string name="auction_id_">Auction ID:</string>
    <string name="notification_heading">"Emall" Would like to send you notifications</string>
    <string name="notification_body">Notifications may include alerts, sounds and icon badges.These can be configured later in settings.</string>
    <string name="allow">Allow</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="select_the_country_of_your_nationality">Select the Country of your Nationality</string>
    <string name="uae">UAE</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="kuwait">Kuwait</string>
    <string name="select_your_preferred_language">Select your Preferred Language</string>
    <string name="confirm">Confirm</string>
    <string name="english">English</string>
    <string name="arab_language">عربي</string>
    <string name="Welcome">Welcome</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="WHYUS">Why Us?</string>
    <string name="enterprise_evaluator_login">Enterprise/Evaluator Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_via_otp">Login Via OTP</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Create_New_Password">Create New Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="login_via_mobile">Login Via Mobile</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_for_free_now">Register for Free Now</string>
    <string name="skip_login"><u>skip login</u></string>
    <string name="otp_sub_heading">Enter your Mobile Number below to get a 4 digit OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp_number_heading">Enter 4 digit OTP sent to your mobile number ending ****231</string>
    <string name="otp">OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_heading">Enter you detail below to create an account</string>
    <string name="email">Email</string>
    <string name="i_agree_to_the_terms_amp_conditions"><![CDATA[I Agree To The Terms \'&\' Conditions]]></string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="verify_via_otp">VERIFY VIA OTP</string>
    <string name="continue_text">Continue</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new1">New</string>
    <string name="used">Used</string>
    <string name="auction">Auction</string>
    <string name="auctions">Auctions</string>
    <string name="cart">Cart</string>
    <string name="sell">Sell</string>
    <string name="categories">Categories</string>
    <string name="home">home</string>
    <string name="settings">Settings</string>
    <string name="app_version">App Version 1.0.0</string>
    <string name="al_gergawi">Al Gergawi</string>
    <string name="country">Country</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="terms_conditions_apply">*Terms &amp; Conditions</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="sell_my_device">Sell My Device</string>
    <string name="see_my_offers">See My Offers</string>
    <string name="track_devices">Track Devices for Estimation</string>
    <string name="evaluation_notifications">Evaluation Notifications</string>
    <string name="my_messages">My Messages</string>
    <string name="my_buying_orders">My Buying Orders</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="track_sold_devices">Track My Sold Devices</string>
    <string name="auction_sellers">Auction Sellers</string>
    <string name="resolution_center">Resolution Center</string>
    <string name="auction_payments">Auction Payments</string>
    <string name="top_offers">Top Offers</string>
    <string name="view_all">View All</string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="laptops">Laptops</string>
    <string name="headphones">Headphones</string>
    <string name="smartwatches">SmartWatches</string>
    <string name="game_console">Game Console</string>
    <string name="camera">Camera</string>
    <string name="promotions">Promotions</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="seller_deals">Seller Deals</string>
    <string name="iphones">iPhones</string>
    <string name="android_phones">Android Phones</string>
    <string name="premium_phones">Premium Phones</string>
    <string name="top_camera_pics">Top Camera Pics</string>
    <string name="editor_choice">Editor\'s Choice</string>
    <string name="large_screen">Large Screen</string>
    <string name="small_screen">Small Screen</string>
    <string name="device_heading">Please select your device\'s category</string>
    <string name="sell_your_device">Sell Your Device</string>
    <string name="tablet">Tablet</string>
    <string name="next">Next</string>
    <string name="sell_your_mobile">Sell Your Mobile</string>
    <string name="serial_number">Serial Number</string>
    <string name="enter_serial_number_here">Enter Serial Number here</string>
    <string name="add">Add</string>
    <string name="how_to_get_serial_number">How To Get Serial Number ?</string>
    <string name="click_here">Click Here</string>
    <string name="upload_images">Upload Images</string>
    <string name="functional_detail_1">Screen Broken/Touchpad or any Display issue</string>
    <string name="functional_detail_2">Front or Back Cameras not working or fault</string>
    <string name="functional_detail_3">volume button defect</string>
    <string name="functional_detail_4">Wifi or GPs not working</string>
    <string name="functional_detail_5">Speakers not working</string>
    <string name="functional_detail_6">Power/Home button faulty, Hard or not working</string>
    <string name="functional_detail_7">Charging defect, unable to charge phone</string>
    <string name="functional_detail_8">Microphone not working</string>
    <string name="functional_detail_9">Battery faulty or very low battery backup</string>
    <string name="physical_and_functional_details">Physical and Functional Details</string>
    <string name="individual_bill_of_loading">Individual bill of loading</string>
    <string name="print">Print</string>
    <string name="download">Download</string>
    <string name="product_seller_page_heading">Seller Page - Manthul</string>
    <string name="_181_days">181 Days</string>
    <string name="active_since">Active Since -</string>
    <string name="rating_text">Overall Rating (from 500+ reviews)</string>
    <string name="select_filter">Select Filter</string>
    <string name="select_category">Select Category</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_model">Select Model</string>
    <string name="select_status">Select Status</string>
    <string name="latest_products_for_sale">Latest Products for Sale</string>
    <string name="colors">Colors</string>
    <string name="color_text">Color</string>
    <string name="description">Description</string>
    <string name="item_detail">Design is an evolutionary process, and filler text is just one tool in your
        progress-pushing arsenal. Relax and do whatever fits with your design process. Don’t set a lot of
        restrictive hard-and-fast rules distract designers and design.</string>
    <string name="specifications">Specifications</string>
    <string name="shipping_and_return">Shipping and Return</string>
    <string name="reviews">Reviews</string>
    <string name="similar_products">Similar Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="date_time_heading"><![CDATA[Select Date & Time for auction]]></string>
    <string name="time_left">Time Left:</string>
    <string name="highest_bid">Highest Bid:</string>
    <string name="auction_id">Auction ID:</string>
    <string name="place_your_bid">Place Your Bid</string>
    <string name="summary">Summary</string>
    <string name="submit_for_evaluation">Submit for Evaluation</string>
    <string name="submit_for_auction">Submit for Auction</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="details">Details</string>
    <string name="additional">Additional</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="submitting_for_online_auction">Submitting for Online Auction</string>
    <string name="summar_detail_sub_heading">After the payment of 100 SAR, you will be asked to wait until the action is over.</string>
    <string name="please_note">Please Note:</string>
    <string name="summary_sub_heading_2">In case you decide not to sell your device or refuse to ship the device within 48 hours</string>
    <string name="you_will_forfeti_the_100_sar_payment">You will forfeti the 100 SAR payment</string>
    <string name="macbook_pro_16">Macbook Pro 16\"</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="estimating_tax">Estimating Tax</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string-array name="stepLabels">
        <item>Personal Info</item>
        <item>Payment</item>
        <item>Confirmation</item>
    </string-array>
    <string name="login_to_use_your_saved_addresses">Login to use your saved addresses</string>
    <string name="no_saved_addresses">No Saved Addresses</string>
    <string name="add_new_address_to_continue">Add New Address To Continue</string>
    <string name="add_via_location">Add Via Location</string>
    <string name="manually_enter_address">Manually Enter Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="full_name">Full Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="city_district">City / District*</string>
    <string name="zip">ZIP*</string>
    <string name="address1">Address*</string>
    <string name="complete_your_address">Complete your address</string>
    <string name="le_grand_chateau_jumeirah_village_cir">Le Grand Chateau Jumeirah Village Cir…</string>
    <string name="change">Change</string>
    <string name="building_no">Building No. *</string>
    <string name="flat_no">Flat No. *</string>
    <string name="e_g_b1_b2">e.g. B1, B2</string>
    <string name="e_g_234">e.g. 234</string>
    <string name="tag_location">Tag Location:</string>
    <string name="office">OFFICE</string>
    <string name="hotel">HOTEL</string>
    <string name="other">OTHER</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="dd_mm_yy_hh_m_s">DD-MM-YY HH:M:s</string>
</resources>