<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_layout"
    android:background="@color/background_color">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/submit_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@drawable/transparent_white_stroke_background_2"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/margin_10dp"
        android:orientation="vertical"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/submitting_for_online_auction"
            android:textColor="@color/selected_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/summar_detail_sub_heading"
            android:textAlignment="center"
            android:textColor="@color/unselected_color"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20dp"
            android:drawablePadding="@dimen/margin_2dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/please_note"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/ic_danger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/summary_sub_heading_2"
            android:textAlignment="center"
            android:textColor="@color/unselected_color"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/you_will_forfeti_the_100_sar_payment"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/dd_mm_yy_hh_m_s"
            android:layout_marginTop="@dimen/margin_10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/evaluation_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@drawable/ic_charcoal_black_gradient_btn_color"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:text="@string/submit_for_evaluation"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_block" />

    <TextView
        android:id="@+id/auction_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@color/selected_color"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:text="@string/submit_for_auction"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evaluation_btn" />

    <include
        layout="@layout/progress_bar_with_text_view"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>