<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraint_layout"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/add_new_address_to_continue"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_via_location_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@drawable/ic_charcoal_black_gradient_btn_color"
        android:gravity="center"
        android:text="@string/add_via_location"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manually_enter_address_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/manually_enter_address"
        android:textAllCaps="false"
        android:textColor="@color/selected_color"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="normal"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_via_location_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>